@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3216 2003/09/03 05:39:22 martti Exp $
+$NetBSD: CHANGES,v 1.3217 2003/09/03 07:07:04 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3491,3 +3491,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated subversion to 0.28.2 [epg 2003-09-02]
 	Updated libnbcompat to 20030824 [jlam 2003-09-02]
 	Updated doxygen to 1.3.3 [martti 2003-09-03]
+	Updated libnbcompat to 20030825 [jlam 2003-09-03]
